<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_project_nav"
            android:icon="@drawable/ic_plus_circle"
            android:title="@string/add_project" />
        <item
            android:id="@+id/contact_us_nav"
            android:icon="@drawable/ic_mail_box"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/about_us_nav"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_about_us"
            android:title="@string/sign_out"/>
    </group>
</menu>